(fix) ad banner does not showing

--- a/css/global.css
+++ b/css/global.css
@@ -140,6 +140,7 @@ footer > div > a > img {
   border-radius: 12px;
   margin-top: 44px;
   margin-bottom: 44px;
+  display: block;
   overflow: hidden;
 }
 
